Bug 65349 - module-card-restore doesn't work properly with bluetooth
Summary: module-card-restore doesn't work properly with bluetooth
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 65348
  Show dependency treegraph
 
Reported: 2013-06-04 13:14 UTC by Tanu Kaskinen
Modified: 2013-09-08 07:49 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Tanu Kaskinen 2013-06-04 13:14:30 UTC
module-bluetooth-device is loaded when the first audio profile is discovered. There may be other profiles appearing later. module-card-restore may have one of those later profiles stored, and if so, restoring the card profile fails. module-card-restore should monitor for new profiles, and do the profile switch if the failed profile appears later.

This bug doesn't affect any released version.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.